# Boysun-ixtisoslashtirilgan-maktabi.

./: .env.example  .gitignore  .htaccess  5_a_chorshanba.html  5_a_dushanba.html  5_a_seshanba.html  CMakeLists.txt  QUICKSTART.md  README.md  README_SECURITY.md  about.html  achievements.html  admin-login.html  admin-panel.html  admin.html  admission.html  api-client.js  api.php  app.py  build.bat  build.sh  config.py  contact.html  contact.php  day.html  generate_static.php  generator.py  generator_ui.html  index.html  liquid-effects.js  liquid_logic.cpp  login.php  maintenance-lock.js  maintenance.html  mobile-style.css  news.json  news.php  output.json  requirements.txt  run.py  (+23 more)
